{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 237,
  "lineage": "86085d2d-b77a-e08c-dba3-18234828c9d0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "rg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/networktest0",
            "internal_domain_name_suffix": "zgu1h3y2lv2uvj0psqguqglxdg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Testservers",
                "primary": true,
                "private_ip_address": "10.0.2.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-90-51-B3",
            "name": "networktest0",
            "private_ip_address": "10.0.2.8",
            "private_ip_addresses": [
              "10.0.2.8"
            ],
            "resource_group_name": "rg2",
            "virtual_machine_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Compute/virtualMachines/ronny0"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_subnet.rg2",
            "azurerm_virtual_network.rg2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/networktest1",
            "internal_domain_name_suffix": "zgu1h3y2lv2uvj0psqguqglxdg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Testservers",
                "primary": true,
                "private_ip_address": "10.0.2.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-90-57-CC",
            "name": "networktest1",
            "private_ip_address": "10.0.2.7",
            "private_ip_addresses": [
              "10.0.2.7"
            ],
            "resource_group_name": "rg2",
            "virtual_machine_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Compute/virtualMachines/ronny1"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_subnet.rg2",
            "azurerm_virtual_network.rg2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/networktest2",
            "internal_domain_name_suffix": "zgu1h3y2lv2uvj0psqguqglxdg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Testservers",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-90-50-7C",
            "name": "networktest2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg2",
            "virtual_machine_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Compute/virtualMachines/ronny2"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_subnet.rg2",
            "azurerm_virtual_network.rg2"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/networktest3",
            "internal_domain_name_suffix": "zgu1h3y2lv2uvj0psqguqglxdg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Testservers",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-90-56-40",
            "name": "networktest3",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "rg2",
            "virtual_machine_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Compute/virtualMachines/ronny3"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_subnet.rg2",
            "azurerm_virtual_network.rg2"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/networktest4",
            "internal_domain_name_suffix": "zgu1h3y2lv2uvj0psqguqglxdg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Testservers",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-90-5D-BF",
            "name": "networktest4",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "rg2",
            "virtual_machine_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Compute/virtualMachines/ronny4"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_subnet.rg2",
            "azurerm_virtual_network.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "rg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "westeurope",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3389",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rd2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "3389",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rg2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "rg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers",
            "name": "Testservers",
            "resource_group_name": "rg2",
            "virtual_network_name": "rg2-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "rg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers",
            "network_security_group_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "subnet_id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers"
          },
          "dependencies": [
            "azurerm_network_security_group.rg2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.rg2",
            "azurerm_virtual_network.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "rg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f7b3a9c9-5d1c-4a79-a74f-940d4819771e",
            "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network",
            "location": "westeurope",
            "name": "rg2-network",
            "resource_group_name": "rg2",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-network/subnets/Testservers",
                "name": "Testservers",
                "security_group": "/subscriptions/97386c43-2906-40dc-9493-4e82e13b31bf/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    }
  ]
}